[package]
name = "pi_image"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = { version = "=0.2.86", features = ["serde-serialize"] }
log = "0.4.14"
image =  "0.23"